# ghcjs-uuid

./: ghcjs-uuid.cabal  stack.yaml
javascript/: uuid.js
src/Data/UUID/: JSV4.hs
