name:                ghcjs-uuid
version:             0.1.0.0
synopsis:            UUID generator for ghcjs
description:         JS UUID generator wrapped to be used in ghcjs
homepage:            https://github.com/manyoo/ghcjs-uuid#readme
license:             BSD3
license-file:        LICENSE
author:              Eric WOng
maintainer:          ericsyw@gmail.com
copyright:           2016 Eric Wong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  js-sources:          javascript/uuid.js
  hs-source-dirs:      src
  exposed-modules:     Data.UUID.JSV4
  build-depends:       base >= 4.7 && < 5,
                       ghcjs-base
  default-language:    Haskell2010

test-suite ghcjs-uuid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-uuid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manyoo/ghcjs-uuid
